<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ashleylaing.latestmusicscene.DrakeStory">

    <ImageView
        android:id="@+id/imgDrake"
        android:layout_width="377dp"
        android:layout_height="173dp"
        android:contentDescription="@string/drake_photo_des"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtTitleDrake"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitleDrake"
        app:layout_constraintVertical_bias="0.04"
        app:srcCompat="@drawable/drake" />

    <TextView
        android:id="@+id/txtTitleDrake"
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:text="@string/Drake_Title"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/imgDrake"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtDrakeStory"
        android:layout_width="wrap_content"
        android:layout_height="254dp"
        android:text="@string/drake_news_story"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgDrake" />
</android.support.constraint.ConstraintLayout>
