<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ashleylaing.latestmusicscene.SelenaStory">

    <TextView
        android:id="@+id/txtTitleSelena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Selena_Title"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/imgSelena"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgSelena"
        android:layout_width="216dp"
        android:layout_height="196dp"
        android:contentDescription="@string/selena_photo_des"
        app:layout_constraintBottom_toTopOf="@+id/txtSelenaStory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitleSelena"
        app:srcCompat="@drawable/selena" />

    <TextView
        android:id="@+id/txtSelenaStory"
        android:layout_width="wrap_content"
        android:layout_height="215dp"
        android:text="@string/selena_news_story"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgSelena" />
</android.support.constraint.ConstraintLayout>
